--- a/assets/stylesheets/application.css
+++ b/assets/stylesheets/application.css
@@ -57,7 +57,7 @@
 
 h4
 {
-	line-height: 5px;
+	line-height: 20px;
 }
 
 .nav 
@@ -185,7 +185,9 @@ footer p
 	z-index: -1;
 	width: 80%;
 	bottom: 0;
-	top: 30px
+	top: 30px;
+	min-width: 1000px;
+	min-height: 661px;
 }
 
 .page h1, #no_opacity h1
@@ -237,11 +239,12 @@ footer p
 {
 	/*border: 1px solid #ddd;*/
 	text-align: left;
-	width: 320px;
+	width: 80%;
 	display: inline-block;
 	padding: 0 10px 0 30px;
-	border-radius: 2px;
-	border-left: 1px solid #222;
+/*	border-radius: 2px;
+	border-left: 1px solid #222;*/
+	height: 600px;
 }
 
 .contact-box1
@@ -304,12 +307,16 @@ footer p
 {
 	z-index: 100;
 	padding: 170px 22% 80px 22%;
+	min-width: 700px;
 }
-
-
 
 
 html,body
 {
 	height: 100%;
+}
+
+.accordion.in.collapse, .accordion.in.collapse a
+{
+	color: #222;
 }
