--- a/assets/stylesheets/application.css
+++ b/assets/stylesheets/application.css
@@ -19,7 +19,7 @@
 
 .home 
 {
-	background: url('/GoemanLaw/assets/images/indexImage.png') center 80px no-repeat;
+	background: url('/assets/images/indexImage.png') center 80px no-repeat;
 	padding-top: 55px;
 }
 
@@ -123,7 +123,7 @@ footer
 	text-align: center;
 	margin-top: 40px;
 	color: #777;
-	background: url('/GoemanLaw/assets/images/linen.png') repeat-x;
+	background: url('/assets/images/linen.png') repeat-x;
 	position: relative;
 	width: 100%;
 }
@@ -143,7 +143,7 @@ footer p
 
 .page-content
 {
-	background: url('/GoemanLaw/assets/images/background.png') no-repeat center center fixed;
+	background: url('/assets/images/background.png') no-repeat center center fixed;
 	-webkit-background-size: cover;
 	-moz-background-size: cover;
 	-o-background-size: cover;
@@ -164,14 +164,14 @@ footer p
 {
 	/*height: 400px;*/
 	background: white;
-	padding: 30px 12% 270px 12%;
+	padding: 30px 12% 330px 12%;
 	margin-top: 140px;
 	margin-left: 10%;
 	margin-right: 10%;
 /*	margin: 140px 10px 0 100px;
 */	box-shadow: 0 1px 10px;
 	opacity: 0.75;
-
+	min-width: 647px;
 }
 
 .about_overlay
